--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,7 @@ host_uuid.properties
 
 # python files (might be generated if running mmm)
 *.pyc
+
+python-midonetclient/doc/*.gz
+python-midonetclient/*.deb
+python-midonetclient/*.rpm
