VxGW HA: remove old service and dead code
Change-Id: I23688fbcd3491f5691d2361462312bc590b57ea7
Signed-off-by: Galo Navarro <galo@midokura.com>

--- a/brain/midonet-brain/conf/cluster.conf
+++ b/brain/midonet-brain/conf/cluster.conf
@@ -67,8 +67,7 @@ period_ms = 1000
 # to maintain bindings from Neutron networks to physical devices attached to
 # ports in a number of VTEPs.
 enabled = false
-with = org.midonet.brain.services.vxgw.VxlanGatewayHA
-
+with = org.midonet.brain.services.vxgw.VxlanGatewayService
 
 # -----------------------------------------------------------------------------
 [topology_api]
@@ -92,4 +91,3 @@ ws_path = /websocket
 session_grace_period = 180000
 # Minimum update buffer size per session
 session_buffer_size = 16384
-
