Unify and modularize new backend dependencies
Change-Id: I5e8e5bcc1eb02da010c613f7fe5828a5c0870472
Signed-off-by: Galo Navarro <galo@midokura.com>

--- a/midolman/build.gradle
+++ b/midolman/build.gradle
@@ -60,7 +60,8 @@ dependencies {
 
     testCompile libraries.akkatest, libraries.scalatest,
                 libraries.jsonpath_assert, libraries.cassandraunit,
-                libraries.curator_test, libraries.mockit
+                libraries.curator_test, libraries.mockit,
+                libraries.test_frameworks
 }
 
 cobertura {
