Move Neutron cluster APIs to REST API
The ZookeeperLockFactory is introducing a dependency on Curator into the
DataClientModule, which we want to avoid to keep the new storage
independent from the old one (and moved into /cluster).  The
ZookeeperLockFactory itself is actually only needed in the API, through
the Neutron cluster API which resides in Midolman.  The ideal would be
to move this cluster API to /cluster, where it belongs.  However this
would require also dragging the DataClient and Zk managers along, which
is a larger problem.  So we are doing here the opposite move, push the
Cluster API to the MidoNet API, taking advantage of the fact that both
Cluster API and REST API will disappear with the new storage stack.
This removes the dependency from Midolman on a plain Curator instance,
leaving us free to manipulate Curator only for new code associated to
the new stack.

Change-Id: I0a2a08acb4c2a487663c968243fe52afedf7d4d4
Signed-off-by: Galo Navarro <galo@midokura.com>

--- a/midonet-api/build.gradle
+++ b/midonet-api/build.gradle
@@ -38,7 +38,7 @@ dependencies {
     compile(project(':midonet-util')) {
         exclude group: 'com.sun', module: 'tools'
     }
-    testCompile project(':midonet-client')
+    testCompile project(':midonet-client'), libraries.jsonpath_assert
 
     providedCompile libraries.servlet
 
@@ -49,8 +49,11 @@ dependencies {
             libraries.jersey_json, libraries.jersey_guice,
             libraries.jersey_core, libraries.jersey_bundle,
             libraries.commons_lang, libraries.commons_lang3,
+            libraries.commons_conf,
             libraries.metrics,
-            libraries.curator_framework, libraries.commons_codec,
+            libraries.curator_framework,
+            libraries.curator_recipes,
+            libraries.commons_codec,
             libraries.hamcrest_core, libraries.hamcrest_lib,
             libraries.validation, libraries.hibernate_validator,
             libraries.guice_multibind, libraries.vmware_midoapi,
