--- a/midolman/build.gradle
+++ b/midolman/build.gradle
@@ -213,7 +213,7 @@ debian.doFirst {
         '-d', 'quagga (>= 0.99.21)',
         '-d', 'java7-runtime-headless',
         '-d', 'iproute (>= 20111117-1ubuntu2.1)',
-        '-d', 'openvswitch-datapath-dkms (>= 1.10) | linux-image-generic (>= 3.13.0) | linux-image-virtual (>= 3.13.0)',
+        '-d', 'openvswitch-datapath-dkms (>= 1.10) | linux-image-generic (>= 3.13.0) | linux-image-virtual (>= 3.13.0) | linux-image-generic-lts-trusty (>= 3.13.0) | linux-image-virtual-lts-trusty (>= 3.13.0)',
         '--conflicts', 'openvswitch-switch',
         '--conflicts', 'openvswitch-datapath-source (>= 1.11)',
         '--conflicts', 'openvswitch-datapath-dkms (>= 1.11)',
