--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@
  */
 
 project.ext {
-    midonetVersion = "1.8-rc1"
+    midonetVersion = "1.8.4"
     vendor = 'MidoNet'
     maintainer = "MidoNet user list <midonet-user@midonet.org>"
     url = "http://midonet.org"
