<WIP> Zoom-based topology generator
Additional topology models for the zoom
topology updater. Intended for read-only
API and UI testing.

Change-Id: Ia0011f50d0d494aec310c596382c0c41b51fa4d1
Signed-off-by: Ernest Artiaga <ernest@midokura.com>

--- a/brain/tools/conf/topology-zkupdater.conf
+++ b/brain/tools/conf/topology-zkupdater.conf
@@ -29,11 +29,12 @@ zookeeper_root = /midonet
 numthreads = 1
 
 # Update interval (in ms)
-period_ms = 20000
+period_ms = 10000
 
 # Initial number of elements in the topology
 initial_routers = 4
 initial_networks_per_router = 4
 initial_ports_per_network = 4
 initial_vteps = 4
+initial_hosts = 4
 
