--- a/midolman/build.gradle
+++ b/midolman/build.gradle
@@ -55,7 +55,8 @@ dependencies {
             libraries.jetty_websocket, libraries.jetty_deploy, libraries.jminix,
             libraries.jsonpath, libraries.curator_recipes,
             libraries.scala_logging, libraries.scallop, libraries.protobuf,
-            libraries.disruptor
+            libraries.disruptor, libraries.mysql_jdbc,
+            "com.fasterxml.jackson.core:jackson-databind:2.3.0"
 
     testCompile libraries.akkatest, libraries.scalatest,
                 libraries.jsonpath_assert, libraries.cassandraunit,
