Add host binding task in mm-ctl
Change-Id: Ic045df67ae34aa17367688d6f641c11efff144b6
Signed-off-by: Joe Mills <joe@midokura.com>

--- a/midolman/build.gradle
+++ b/midolman/build.gradle
@@ -55,7 +55,7 @@ dependencies {
             libraries.jetty_websocket, libraries.jetty_deploy, libraries.jminix,
             libraries.jsonpath, libraries.curator_recipes,
             libraries.scala_logging, libraries.scallop, libraries.protobuf,
-            libraries.disruptor
+            libraries.disruptor, libraries.mysql_jdbc
 
     testCompile libraries.akkatest, libraries.scalatest,
                 libraries.jsonpath_assert, libraries.cassandraunit,
