Fixing ZkRootPath in ZoomProvider
This patch fixes the Zookeeper root path used in ZoomProvider.

Change-Id: If71f07f5a6dff21c6eb88638b4e37b4938470b60
Signed-off-by: Nicolas Schiper <nicolas@midokura.com>

--- a/cluster/build.gradle
+++ b/cluster/build.gradle
@@ -53,7 +53,8 @@ dependencies {
             libraries.scala,
             libraries.scala_async
 
-    testCompile libraries.curator_test,
+    testCompile libraries.commons_conf,
+                libraries.curator_test,
                 libraries.hamcrest,
                 libraries.logback,
                 libraries.scalatest,
