MDTS: Add missing chain to LB test
Packets will be dropped in they are not reverse NATed by the Load
Balancer, for example in the case the state packet arrives after the
packet itself. This will avoid confusing and forcing curl to send a
TCP reset.

Ref MNA-108

Change-Id: I8d506c3e2eb51a23f494a8137766a6477b5f05f1
Signed-off-by: Duarte Nunes <duarte@midokura.com>

--- a/tests/mdts/tests/topologies/mmm_virtual_test_load_balancer.yaml
+++ b/tests/mdts/tests/topologies/mmm_virtual_test_load_balancer.yaml
@@ -84,6 +84,18 @@ virtual_topology:
                     admin_state_up: true
                     protocol_port: 10009
                     session_persistence: SOURCE_IP
+  chains:
+    - chain:
+        id: 1
+        name: drop_non_nat_rev
+        rules:
+          - rule:
+              id: 1
+              position: 1
+              nw_proto: 6
+              nw_src_address: 10.0.2.0
+              nw_src_length: 24
+              type: drop
 
   routers:
     - router:
